# hydraprimex

./: .gitignore  Makefile  README.md
.github/workflows/: ut.yml
data/pace2023/: exact_001.gr  exact_002.gr  exact_003.gr  exact_004.gr  exact_005.gr  exact_006.gr  exact_007.gr  exact_008.gr  exact_009.gr  exact_010.gr  exact_011.gr  exact_012.gr  exact_013.gr  exact_014.gr  exact_015.gr  exact_016.gr  exact_017.gr  exact_018.gr  (+182 more)
scripts/: create_complement.py  create_trigraph.py
src/main/cpp/: CMakeLists.txt  hydraprimex.cpp
src/main/cpp/algorithm/: ExactSolver.hpp
src/main/cpp/algorithm/base/: BaseSolver.hpp  SolverState.hpp
src/main/cpp/algorithm/exact/: BranchSolver.cpp  BranchSolver.hpp  SATSolver.hpp
src/main/cpp/algorithm/lowerbound/: LBGreedy.hpp  LBSeparate.cpp  LBSeparate.hpp  LBTrivial.hpp
src/main/cpp/algorithm/preprocess/: VertexSeparator.cpp  VertexSeparator.hpp
src/main/cpp/algorithm/reduction/: Reducer.hpp
src/main/cpp/algorithm/upperbound/: GreedySolver.cpp  GreedySolver.hpp  WeakRedPotential.hpp
src/main/cpp/app/: AppConfiguration.hpp
src/main/cpp/ds/: ProblemInstance.hpp
src/main/cpp/ds/cache/: SimpleCache.hpp
src/main/cpp/ds/graph/: GraphLog.hpp  TriGraph.cpp  TriGraph.hpp  TriGraph_basic.cpp  TriGraph_connectivity.cpp  TriGraph_construct.cpp  TriGraph_contract.cpp  TriGraph_debug.cpp  TriGraph_hash.cpp  TriGraph_io.cpp  TriGraph_op.cpp
src/main/cpp/ds/map/: Bimap.hpp
src/main/cpp/ds/set/: FastSet.cpp  FastSet.hpp  SortedVectorSet.hpp  basic_set.hpp
src/main/cpp/generator/: random.cpp  random.hpp  tree.cpp  tree.hpp
src/main/cpp/readwrite/: pace_extended.cpp  pace_extended.hpp
src/main/cpp/sat/: SATAdapter.cpp  SATAdapter.hpp
src/main/cpp/sat/card/: SeqCounter.hpp
src/main/cpp/util/: Random.cpp  Random.hpp  Timer.hpp  hash_table.cpp  hash_table.hpp  logger.cpp  logger.hpp  type_traits.hpp  util.cpp  util.hpp
(+601 files in other folders)
